--- a/templates/quiz_select.html
+++ b/templates/quiz_select.html
@@ -73,6 +73,9 @@
         <button type="submit">Submit Quiz</button>
         <a href="{{ url_for('home') }}"><button type="button">Back Home</button></a>
       </div>
+      <div style="margin-top:20px;">
+      <a href="{{ url_for('home') }}"><button type="button">Return Home</button></a>
+    </div>
     </form>
   </main>
 </body>
